--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,7 @@
 {
-    "name": "Streamlit Development",
-    "build": {
-      "dockerfile": "Dockerfile",
-      "context": ".."
-    },
-    "forwardPorts": [8888], // Forward port based on standard Jupyter ports
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "ms-python.python",
-          "ms-python.vscode-pylance"
-        ]
-      }
-    },
-    "postCreateCommand": "uv run --with jupyter jupyter lab"
-  }
+  "name": "Python Development with uv",
+  "features": {
+    "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {}
+  },
+  "postCreateCommand": "uv --version"
+}
