--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,5 @@
   "features": {
     "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {}
   },
-  "postStartCommand": "nohup bash -c 'uv run --with jupyter jupyter lab &'"
+  "postStartCommand": "bash -c 'uv run --with jupyter jupyter lab'"
 }
