--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
   "features": {
     "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {}
   },
-  "postStartCommand": "nohup bash -c 'uv run --with jupyter jupyter lab --link-mode=copy' &",
+  "postStartCommand": "nohup bash -c 'uv run --with jupyter jupyter lab --link-mode=copy &'",
   "forwardPorts": [8888],
   "portsAttributes": {
     "8888": {
