--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,6 @@
 {
   "name": "Python Development with uv",
-  "image": "mcr.microsoft.com/devcontainers/base:bookworm",
-  "features": {
-    "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {}
-  },
+  "image": "ghcr.io/astral-sh/uv:latest",
   "postStartCommand": "nohup bash -c 'uv run --with jupyter jupyter lab --link-mode=copy &'",
   "forwardPorts": [8888],
   "portsAttributes": {
