Test with uv-only

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,13 @@
 # Pull the base python image + uv | Note: this repository needs python 3.9
-FROM python:3.13-slim-bookworm
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+FROM ghcr.io/astral-sh/uv:latest
 
 # Copy the project into the image
 ADD . /app
 
 # Set the working directory
 WORKDIR /app
+
+ENV UV_LINK_MODE=copy
+
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync
