--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,7 @@
 {
-  "name": "Streamlit Development",
-  "build": {
-    "dockerfile": "Dockerfile",
-    "context": ".."
-  },
-  "postStartCommand": "nohup bash -c 'uv run --with jupyter jupyter lab --link-mode=copy &'",
-  "forwardPorts": [8888],
-  "portsAttributes": {
-    "8888": {
-      "label": "Jupyter Lab",
-      "onAutoForward": "notify"
-    }
+  "name": "Python Development with uv",
+  "image": "mcr.microsoft.com/devcontainers/base:bookworm",
+  "features": {
+    "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {}
   }
 }
